# Phantom-Roblox-Executer

.github/workflows/: build.yml
PhantomExec/: BUILD.bat  BUILD_AND_DEPLOYMENT.md  ByfronBypass.cpp  ByfronBypass.h  CMakeLists.txt  COMPILATION_CHECKLIST.md  COMPILE_DLL_GUIDE.md  COMPREHENSIVE_GUIDE.md  DEEP_IMPLEMENTATION_GUIDE.md  EnvironmentManager.cpp  EnvironmentManager.h  FINAL_README.md  IPCServer.cpp  IPCServer.h  Injector.cpp  Install-PhantomExecutor.ps1  LuauHooker.cpp  LuauHooker.h  MANIFEST.md  Phantom.sln  Phantom.vcxproj  PhantomCore.cpp  PhantomCore.h  PhantomExecutor-Simple.bat  PhantomExecutor.bat  PhantomExecutor.cs  PhantomExecutor.csproj  PhantomExecutor.vbs  Phantom_Executor_Design.md  QUICKSTART.md  README.md  ScriptEngine.cpp  ScriptEngine.h  Tests.cpp  UNCValidator.cpp  UNCValidator.h  WINDOWS_BUILD_GUIDE.md  WINDOWS_SETUP.md  dllmain.cpp  phantom_launcher.py
